--- a/app/views/slurrystorage/current/answers2.html
+++ b/app/views/slurrystorage/current/answers2.html
@@ -23,71 +23,20 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-<h1 class="govuk-heading-xl">Score results</h1>
-<p class="govuk-!-font-size-24">Based on your answers, your project is:</p>
+<h1 class="govuk-heading-l">Your results</h1>
+<p class="govuk-!-font-size-19">Based on your answers, your project is:</p>
 
     <div class="govuk-inset-text">
-      <h2 class="govuk-heading-m">In a priority funding area</h2>
-      <p>This means your project might not be successful</p>
+      <h2 class="govuk-heading-m">Eligible to apply</h2>
     </div>
-    <p class="govuk-body">RPA wants to fund projects that are in protected sites. <br><br>
-      Depending on the number of applications received, they may extend the grant to projects outside protected sites. </p>
-
-    <h1 class="govuk-heading-l">Your answers</h1>
-    <table class="govuk-table govuk-body govuk-!-font-size-16">
-      <thead class="govuk-table__head">
-        <tr class="govuk-table__row">
-          <th scope="col" class="govuk-table__header">Answers</th>
-          <th scope="col" class="govuk-table__header">Change</th>
-        </tr>
-      </thead>
-      <tbody class="govuk-table__body">
+    <p class="govuk-body">The RPA wants to fund projects that have a higher environmental benefit.<br><br>
+    We will do this by inviting applicants with projects near protected sites (for example, SSSI) to submit a full application.<br><br>
+    Depending on the number of applications received, we may invite projects outside protected sites to submit a full application.</p>
 
 
-        <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header">Within 1km of air quality protected site
-          <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
-            <li>Special areas of conservation (SACs) </li>
-            <li>Special protection areas (PAs) </li>
-
-            </ul>
-          </th>
-          <td class="govuk-table__cell"><a href="air-quality">Change</td>
-        </tr>
-
-        <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header">Within 1km of water quality protected site
-            <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
-            <li>Designated water catchments</li>
-            <li>Ramsar sites</li>
-            </ul>
-          </th>
-        <td class="govuk-table__cell"><a href="water-quality">Change</td>
-        </tr>
-
-        <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header">Planning permission
-            <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
-            <li>  Applied for but not yet approved</li>
-             </ul>
-          </th>
-        <td class="govuk-table__cell"><a href="planning-permission">Change</td>
-        </tr>
-
-      </tbody>
-    </table>
-
-
-<div class="govuk-warning-text">
-<span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-<strong class="govuk-warning-text__text">
-<span class="govuk-warning-text__assistive">Warning</span>
-The likelihood of a full application being successful will also depend on the number and value of applications we receive.
-</strong>
-</div>
 <h2 class="govuk-heading-m">Next steps</h2>
 <p class="govuk-body">Next, add your business and contact details and submit them to the RPA (you should only do this once).</p>
-<p>You’ll get an email with your score and answers, and a reference number.</p>
+<p>You’ll get an email with your answers and a reference number.</p>
 <br/><br/>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
