--- a/app/views/slurrystorage/index.html
+++ b/app/views/slurrystorage/index.html
@@ -20,16 +20,26 @@
         <h2 class="govuk-heading-l">User research</h2>
 
         <p class='govuk-list app-list--definition'>
-         <a href='slurrystorage/current/start' class="govuk-link--no-visited-state">Start page</a><br>
-            Specialist start page, hosted on GOV.UK</p>
-
-        <p class='govuk-list app-list--definition'>
-        <a href='#' class="govuk-link--no-visited-state">Confirmation email</a><br>
-          User will receive a confirmation email, with their answers. Service is routed by GOV Notify.</p>
+        <a href='slurrystorage/current/standardised-costs' class="govuk-link--no-visited-state" target="new">Standardised costs page</a><br>
+          Mini-journey where users can choose project items based on their needs, followed by a built-in calculation which shows the total requested grant amount.</p>
 
           <p class='govuk-list app-list--definition'>
-          <a href='slurrystorage/current/standardised-costs' class="govuk-link--no-visited-state">Standardised costs</a><br>
-            Mini-journey where we work out the project spec based on standardised costs.</p>
+          <a href='slurrystorage/current/reference-number' class="govuk-link--no-visited-state" target="new">Confirmation page</a><br>
+            The final page where user is routed to, showing a reference number and summarizing what happens next. </p>
+
+          <h2 class="govuk-heading-m">A/B testing of Results page</h2>
+          <p class='govuk-list app-list--definition'>
+                      <a href='slurrystorage/current/answers2' class="govuk-link--no-visited-state" target="new">Results page (version 1)</a><br>
+                         Specialist start page, hosted on GOV.UK</p>
+
+        <p class='govuk-list app-list--definition'>
+         <a href='slurrystorage/current/answers' class="govuk-link--no-visited-state" target="new">Results page (version 2)</a><br>
+            Specialist start page, hosted on GOV.UK</p>
+
+
+
+
+
 
 
 
@@ -41,8 +51,8 @@
 
         <p class='govuk-list app-list--definition'>
           <a href='slurrystorage/current/start' class="govuk-link--no-visited-state"><strong>Version 4 (current)</a></strong><br>
-          This version was not tested with users yet. (Issues 137 to 194.)<br>
-            <span class="govuk-body govuk-!-font-size-14">#Last updated on 20 July 2022<br/>
+          This version was not tested with users yet. (Issues 137 to 203.)<br>
+            <span class="govuk-body govuk-!-font-size-14">#Last updated on 26 July 2022<br/>
             </span></p>
 
         <p class='govuk-list app-list--definition'>
