--- a/app/views/slurrystorage/index.html
+++ b/app/views/slurrystorage/index.html
@@ -30,11 +30,11 @@
           <h2 class="govuk-heading-m">A/B testing of Results page</h2>
           <p class='govuk-list app-list--definition'>
                       <a href='slurrystorage/current/answers2' class="govuk-link--no-visited-state" target="new">Results page (version 1)</a><br>
-                         Specialist start page, hosted on GOV.UK</p>
+                         Showing results of the eligibility checker</p>
 
         <p class='govuk-list app-list--definition'>
          <a href='slurrystorage/current/answers' class="govuk-link--no-visited-state" target="new">Results page (version 2)</a><br>
-            Specialist start page, hosted on GOV.UK</p>
+            Showing results of the eligibility checker</p>
 
 
 
