--- a/app/views/slurrystorage/current/standardised-grant-amounts.html
+++ b/app/views/slurrystorage/current/standardised-grant-amounts.html
@@ -25,11 +25,11 @@ Standardised costs
 
          <div class="govuk-form-group">
         <h2 class="govuk-heading-l">Grant amounts for eligible items</h2>
-        <p class="govuk-body">The Slurry Infrastructure grant uses standardised costs for the eligible items. </p>
+        <p class="govuk-body">The Slurry Infrastructure grant uses standardised grant amounts for the eligible items. </p>
 
 
         {{ govukWarningText({
-          text: "Items may cost more than the standardised cost.",
+          text: "Items may cost more than the standardised grant amounts.",
           iconFallbackText: "Warning"
         }) }}
 
