--- a/app/views/slurrystorage/index.html
+++ b/app/views/slurrystorage/index.html
@@ -20,7 +20,7 @@
         <h2 class="govuk-heading-l">User research</h2>
 
         <p class='govuk-list app-list--definition'>
-        <a href='slurrystorage/current/standardised-costs' class="govuk-link--no-visited-state" target="new">Standardised costs page</a><br>
+        <a href='slurrystorage/current/standardised-grant-amounts' class="govuk-link--no-visited-state" target="new">Standardised grant amounts page</a><br>
           Mini-journey where users can choose project items based on their needs, followed by a built-in calculation which shows the total requested grant amount.</p>
 
           <p class='govuk-list app-list--definition'>
@@ -51,8 +51,8 @@
 
         <p class='govuk-list app-list--definition'>
           <a href='slurrystorage/current/start' class="govuk-link--no-visited-state"><strong>Version 4 (current)</a></strong><br>
-          This version was not tested with users yet. (Issues 137 to 203.)<br>
-            <span class="govuk-body govuk-!-font-size-14">#Last updated on 26 July 2022<br/>
+          This version was not tested with users yet. (Issues 137 to 205.)<br>
+            <span class="govuk-body govuk-!-font-size-14">#Last updated on 01 August 2022<br/>
             </span></p>
 
         <p class='govuk-list app-list--definition'>
