--- a/app/views/slurrystorage/current/start.html
+++ b/app/views/slurrystorage/current/start.html
@@ -69,6 +69,7 @@
         <li>information about your business (for example, number of employees and turnover)</li>
         <li>information about the project (for example, type of store and capacity, type of cover and size, approximate size and quantity of other items you need, the OS grid reference)</li>
         <li>a list of the items you’d like to buy for the project</li>
+        <li>information about your planning permission</li>
         </ul>
       <p class="govuk-body govuk-!-margin-bottom-8">If you do not enter any information for more than 20 minutes, your
 application will time out and you  will have to start again. </p>
