--- a/app/views/slurrystorage/current/project-summary.html
+++ b/app/views/slurrystorage/current/project-summary.html
@@ -49,7 +49,7 @@ Project summary
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header">{{ storeTypeCost[storeType].text }}</th>
         <td class="govuk-table__cell">{{storeTypeCost[storeType].unit}}</td>
-        <td class="govuk-table__cell">{{data ['current-capacity']}}m<sup>3</sup></td>
+        <td class="govuk-table__cell">{{data ['current-capacity2']}}m<sup>3</sup></td>
         <td class="govuk-table__cell">{{storeTypeCost[storeType].formattedValue}}</td>
       </tr>
     {% endif %}
