--- a/app/views/slurrystorage/current/standardised-grant-amounts.html
+++ b/app/views/slurrystorage/current/standardised-grant-amounts.html
@@ -305,7 +305,7 @@ Standardised costs
           rows: [
           [
             {
-            html: "Slurry store wall mixers with store <br>capacity up to 1,200 cubic metre"
+            html: "Slurry store wall mixers with store <br>capacity up to 1,200 cubic metres"
             },
             {
             html: "£350 per tank"
@@ -313,7 +313,7 @@ Standardised costs
           ],
           [
             {
-            html: "Slurry store wall mixers with store <br>capacity up to 8,000 cubic metre"
+            html: "SSlurry store wall mixers with store <br>capacity up to 8,000 cubic metres"
             },
             {
             html: "£1,000 per tank"
