--- a/app/views/slurrystorage/current/start.html
+++ b/app/views/slurrystorage/current/start.html
@@ -38,11 +38,11 @@
 
         <div class="govuk-body">
           <h2 class="govuk-heading-m">Who can apply</h2>
-          <p>You can apply if you:</p>
+          <p>You can apply if:</p>
           <ul class="govuk-list govuk-list--bullet">
-            <li>are a dairy, beef or pig farmer</li>
-            <li>have an existing slurry system</li>
-            <li>have a slurry store in England</li>
+            <li>you are a dairy, beef or pig farmer</li>
+            <li>you have an existing slurry system</li>
+            <li>the slurry store will be in England</li>
           </ul>
           <p class="govuk-body">The minimum grant you can claim is £25,000. The maximum grant is £250,000.</p>
         </div>
@@ -76,7 +76,7 @@ application will time out and you  will have to start again. </p>
     </div>
     <div class="govuk-body">
       <h3 class="govuk-heading-m govuk-!-margin-top-2">Problems using the online service</h3>
-      <p class="govuk-body">If you have any problems  using the online  service, contact the RPA.</p>
+      <p class="govuk-body">If you have any problems using the online  service, call the RPA and follow the options for the Farming Transformation Fund scheme.</p>
       <h3 class="govuk-heading-s">Telephone</h3>
 
       <ul class="govuk-list">
