--- a/app/views/slurrystorage/current/potential-grant.html
+++ b/app/views/slurrystorage/current/potential-grant.html
@@ -26,7 +26,7 @@ Potential grant funding
       Potential grant funding
     </h1>
 
-    <p class="govuk-body">Based on the standardised costs for each item and the approximate <br>size and quantities you entered, we estimate you could be eligible for <br>a grant of
+    <p class="govuk-body">Based on the standardised grant amount for each item and the approximate <br>size and quantities you entered, we estimate you could be eligible for <br>a grant of
 
       {# Putting a rule to cap grant amount at 250,000 when the value goes over maximum grant amount of 250K #}
       {% if data['potentialgrant'] >= 250000 %}
