--- a/app/views/slurrystorage/current/project-summary-fail.html
+++ b/app/views/slurrystorage/current/project-summary-fail.html
@@ -26,8 +26,8 @@
      </h1>
 
 
-      <p class="govuk-body">The minimum grant you can claim is £25,000. The maximum grant is £250,000.</p>
-    
+      <p class="govuk-body">The minimum grant you can claim is £25,000.</p>
+
 
 <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19"> See other grants you may be eligible for.</a><p>
       <!--See <a href="">the large countryside productivity grant guidance</a> for further information.-->
