--- a/app/views/slurrystorage/current/agent-details.html
+++ b/app/views/slurrystorage/current/agent-details.html
@@ -79,21 +79,21 @@
         <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-3">Business address</h2>
         <div class="govuk-form-group">
             <label class="govuk-label" for="agent-address1">
-                Building and street
+                Address line 1
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="agent-address1" name="agent-address1" type="agent-address1" spellcheck="false" aria-describedby="agent-address1-hint" autocomplete="agent-address1" value="{{ data['agent-address1'] }}">
         </div>
 
         <div class="govuk-form-group">
             <label class="govuk-label" for="agent-address2">
-
+              Address line 2 (optional)
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="agent-address2" name="agent-address2" type="agent-address2" spellcheck="false" aria-describedby="agent-address2-hint" autocomplete="agent-address2" value="{{ data['agent-address2'] }}">
         </div>
 
         <div class="govuk-form-group">
             <label class="govuk-label" for="agent-town">
-                Town
+                Town or city
             </label>
             <input class="govuk-input govuk-!-width-one-half" id="agent-town" name="agent-town" type="agent-town" spellcheck="false" aria-describedby="agent-town-hint" autocomplete="agent-town" value="{{ data['agent-town'] }}">
         </div>
