--- a/app/views/slurrystorage/current/tenancy-length-condition.html
+++ b/app/views/slurrystorage/current/tenancy-length-condition.html
@@ -25,7 +25,7 @@
         You may be able to apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">You will need to extend your tenancy agreement before you can complete a full application.</p>
+      <p class="govuk-body">You will need to extend your tenancy agreement for 5 years after the final grant payment.</p>
 
         <p><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
 
