--- a/app/views/slurrystorage/current/tenancy-length.html
+++ b/app/views/slurrystorage/current/tenancy-length.html
@@ -28,7 +28,9 @@
                 Do you have a tenancy agreement for 5 years after the final grant payment?
               </h1>
             </legend>
-            <br>
+            <div id="tenancy-length-hint" class="govuk-hint">
+      The location of the slurry store
+    </div>
             <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="tenancy-length" name="tenancy-length" type="radio" value="Yes" {{ checked("tenancy-length", "Yes") }}>
