--- a/app/views/slurrystorage/current/consent.html
+++ b/app/views/slurrystorage/current/consent.html
@@ -41,7 +41,7 @@
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="confirm" name="confirmation" type="checkbox" value="{{ data['confirmation'] }}">
                 <label class="govuk-label govuk-checkboxes__label" for="confirm">
-                (Optional) I confirm
+                (Optional) I consent to being contacted about improvement services 
                 </label>
               </div>
             </div>
