--- a/app/views/water/v7public/views/layouts/GUIDANCEALL.html
+++ b/app/views/water/v7public/views/layouts/GUIDANCEALL.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block pageTitle %}
-Check if you can apply for a Water Management Grant
+Rural grants and payments - GOV.UK
 {% endblock %}
 
 {% block header %}
@@ -31,7 +31,7 @@ Check if you can apply for a Water Management Grant
       </li>
       <li class="govuk-breadcrumbs__list-item" aria-current="false">
         <a data-track-category="breadcrumbClicked" data-track-action="2" data-track-label="#" data-track-options="{}" class="govuk-breadcrumbs__link" aria-current="false"
-          href="#">Rural grants and payments </a>
+          href="#">Rural grants and payments</a>
       </li>
     </ol>
   </div>
@@ -47,25 +47,36 @@ Check if you can apply for a Water Management Grant
 
     <div class="gem-c-title govuk-x!-margin-top-8 govuk-!-margin-bottom-8">
       <p class="gem-c-title__context">
-        Guidance
+        Farming and food grants and payments
       </p>
-      <h1 class="gem-c-title__text gem-c-title__text--long">
-        Farming Transformation Fund water management grant
+      <h1 class="gem-c-title__text">
+        Rural grants and payments
       </h1>
     </div>
-
-    <p class="gem-c-lead-paragraph">Get a grant to make more efficient use of water for irrigation and to secure water supplies for crops.</p>
 
   </div>
 </div>
 
-<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds metadata-column">
+
+<div class="gem-c-metadata" data-module="gem-toggle">
+  <dl data-module="track-click">
+      <dt class="gem-c-metadata__term">From:</dt>
+      <dd class="gem-c-metadata__definition">
+          <a href="/government/organisations/rural-payments-agency">Rural Payments Agency</a>, <a href="/government/organisations/department-for-environment-food-rural-affairs">Department for Environment, Food &amp; Rural Affairs</a>, <a href="/government/organisations/natural-england">Natural England</a>, <a href="/government/organisations/environment-agency">Environment Agency</a>, <a href="/government/organisations/forestry-commission">Forestry Commission</a>, <a href="/government/organisations/rural-development-programme-for-england-network">Rural Development Programme for England Network</a>, and <a href="/government/organisations/animal-and-plant-health-agency">Animal and Plant Health Agency</a>
+
+      </dd>
+  </dl>
+</div>
+</div>
+
+<!--<div class="govuk-grid-row">
   <div class="metadata-logo-wrapper">
     <div class="govuk-grid-column-two-thirds metadata-column">
       <div class="app-c-publisher-metadata" lang="en">
         <div class="app-c-published-dates " lang="en">
           Published 31 July 2017
-          <br>Last updated 12 January 2021
+          <br>Last updated 9 July 2019
           — <a href="#history">see all updates</a>
         </div>
 
@@ -87,7 +98,7 @@ Check if you can apply for a Water Management Grant
 
     </div>
   </div>
-</div>
+</div>-->
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
@@ -99,7 +110,7 @@ Check if you can apply for a Water Management Grant
     <div class="responsive-bottom-margin">
       <div class="app-c-published-dates app-c-published-dates--history" id="history" data-module="toggle" lang="en">
         Published 31 July 2017
-        <br>Last updated 12 January 2021
+        <br>Last updated 9 July 2019
         <a href="#full-history" class="app-c-published-dates__toggle" data-controls="full-history" data-expanded="false" data-toggled-text="-&nbsp;hide all updates" role="button" aria-controls="full-history" aria-expanded="false">+&nbsp;show all
           updates</a>
       </div>
@@ -113,50 +124,6 @@ Check if you can apply for a Water Management Grant
           Contents
         </a>
       </div>
-    </div>
-
-  </div>
-
-  <div class="govuk-grid-column-one-third">
-
-    <div class="gem-c-contextual-sidebar">
-
-      <div class="gem-c-related-navigation">
-
-        <h2 class="gem-c-related-navigation__main-heading" data-track-count="sidebarRelatedItemSection">
-          Related content
-        </h2>
-
-        <nav role="navigation" class="gem-c-related-navigation__nav-section" aria-labelledby="related-nav-related_items-2dae1b11" data-module="gem-toggle">
-
-          <ul class="gem-c-related-navigation__link-list" data-module="track-click">
-
-            <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
-                data-track-action="1.1 Related content" data-track-label="#"
-                data-track-options="{}" href="">Large grants for slurry equipment</a></li>
-            <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
-                data-track-action="1.2 Related content" data-track-label="#"
-                data-track-options="{}"
-                href="">Small grants for equipment to improve productivity</a></li>
-
-          </ul>
-        </nav>
-
-        <nav role="navigation" class="gem-c-related-navigation__nav-section" aria-labelledby="related-nav-collections-2dae1b11" data-module="gem-toggle">
-
-          <h3 id="related-nav-collections-2dae1b11" class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--sidebar" data-track-count="sidebarRelatedItemSection">Collection</h3>
-
-          <ul class="gem-c-related-navigation__link-list" data-module="track-click">
-
-            <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar" data-track-category="relatedLinkClicked" data-track-action="2.1 Collection"
-                data-track-label="#" data-track-options="{&quot;dimension28&quot;:&quot;1&quot;,&quot;dimension29&quot;:&quot;Rural payments and grants&quot;}"
-                href="">Rural payments and grants</a></li>
-
-          </ul>
-        </nav>
-
-      </div>
-
     </div>
 
   </div>
