--- a/app/views/water/v7public/views/layouts/GUIDANCEWATER.html
+++ b/app/views/water/v7public/views/layouts/GUIDANCEWATER.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block pageTitle %}
-Check if you can apply for a Water Management Grant
+Check if you can apply for a Farming Transformation Fund water management grant 
 {% endblock %}
 
 {% block header %}
@@ -50,7 +50,7 @@ Check if you can apply for a Water Management Grant
         Guidance
       </p>
       <h1 class="gem-c-title__text gem-c-title__text--long">
-        Farming Transformation Fund water management grant
+        Farming Transformation Fund water management grant 
       </h1>
     </div>
 
