--- a/app/views/water/v7public/views/layouts/GUIDANCE.html
+++ b/app/views/water/v7public/views/layouts/GUIDANCE.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block pageTitle %}
-Check if you can apply for a Water Management Grant
+Large Countryside Productivity Grants - GOV.UK
 {% endblock %}
 
 {% block header %}
@@ -50,11 +50,13 @@ Check if you can apply for a Water Management Grant
         Guidance
       </p>
       <h1 class="gem-c-title__text gem-c-title__text--long">
-        Farming Transformation Fund water management grant
+        Large Countryside Productivity Grants
       </h1>
     </div>
 
-    <p class="gem-c-lead-paragraph">Get a grant to make more efficient use of water for irrigation and to secure water supplies for crops.</p>
+    <p class="gem-c-lead-paragraph ">
+      How to apply for grants and submit an application under the Countryside Productivity Scheme
+    </p>
 
   </div>
 </div>
@@ -65,7 +67,7 @@ Check if you can apply for a Water Management Grant
       <div class="app-c-publisher-metadata" lang="en">
         <div class="app-c-published-dates " lang="en">
           Published 31 July 2017
-          <br>Last updated 12 January 2021
+          <br>Last updated 9 July 2019
           — <a href="#history">see all updates</a>
         </div>
 
@@ -99,7 +101,7 @@ Check if you can apply for a Water Management Grant
     <div class="responsive-bottom-margin">
       <div class="app-c-published-dates app-c-published-dates--history" id="history" data-module="toggle" lang="en">
         Published 31 July 2017
-        <br>Last updated 12 January 2021
+        <br>Last updated 9 July 2019
         <a href="#full-history" class="app-c-published-dates__toggle" data-controls="full-history" data-expanded="false" data-toggled-text="-&nbsp;hide all updates" role="button" aria-controls="full-history" aria-expanded="false">+&nbsp;show all
           updates</a>
       </div>
@@ -133,11 +135,23 @@ Check if you can apply for a Water Management Grant
 
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
                 data-track-action="1.1 Related content" data-track-label="#"
-                data-track-options="{}" href="">Large grants for slurry equipment</a></li>
+                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Rural Development Programme for England: LEADER funding&quot;}" href="#">Rural
+                Development Programme for England: LEADER funding</a></li>
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
                 data-track-action="1.2 Related content" data-track-label="#"
-                data-track-options="{}"
-                href="">Small grants for equipment to improve productivity</a></li>
+                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Small Grant scheme - livestock handling items in short supply&quot;}"
+                href="#">Small Grant scheme - livestock handling items in short supply</a></li>
+            <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
+                data-track-action="1.3 Related content" data-track-label="#"
+                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Check if you're eligible for the coronavirus Small Business Grant Fund&quot;}"
+                href="#">Check if you're eligible for the coronavirus Small Business Grant Fund</a></li>
+            <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
+                data-track-action="1.4 Related content" data-track-label="#"
+                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Water Environment Grant (WEG) handbooks: guidance and forms&quot;}"
+                href="#">Water Environment Grant (WEG) handbooks: guidance and forms</a></li>
+            <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar gem-c-related-navigation__section-link--inline  gem-c-related-navigation__section-link--other"
+                data-track-category="relatedLinkClicked" data-track-action="1.5 Related content" data-track-label="#"
+                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;RDPE Growth Programme&quot;}" href="#">RDPE Growth Programme</a></li>
 
           </ul>
         </nav>
@@ -150,7 +164,7 @@ Check if you can apply for a Water Management Grant
 
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar" data-track-category="relatedLinkClicked" data-track-action="2.1 Collection"
                 data-track-label="#" data-track-options="{&quot;dimension28&quot;:&quot;1&quot;,&quot;dimension29&quot;:&quot;Rural payments and grants&quot;}"
-                href="">Rural payments and grants</a></li>
+                href="#">Rural payments and grants</a></li>
 
           </ul>
         </nav>
