--- a/app/views/water/current/grant.html
+++ b/app/views/water/current/grant.html
@@ -20,9 +20,11 @@ Potential grant funding
     {% set grantAmount = data['project-cost'] * 0.4 %}
 
     <p class="govuk-body">You may be able to apply for a grant of up to <strong>£{{ grantAmount | toFixed(2) | commafy }}</strong>, based on the estimated cost of £{{ data['project-cost'] | toFixed(2) | commafy }}.</p>
-    <div class="govuk-inset-text  govuk-!-margin-bottom-9">
-      The project is not guaranteed to receive a grant.
-    </div>
+
+    {{ govukWarningText({
+      text: "There’s no guarantee the project will receive a grant.",
+      iconFallbackText: "Warning"
+    }) }}
 
     <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
