--- a/app/views/water/current/remaining-costs-fail.html
+++ b/app/views/water/current/remaining-costs-fail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You cannot apply for a grant from this scheme
+  Remaining costs fail
 {% endblock %}
 
 {% block beforeContent %}
@@ -16,10 +16,18 @@
       <h1 class="govuk-heading-l">
         You cannot apply for a grant from this scheme
       </h1>
+      <p>You cannot use public money (for example, grant funding from government or local authorities) towards the project costs.</p>
 
-      <p>You cannot use public money (for example grant funding from government or local authorities) towards the project costs.</p>
-        
-      <p>You can use loans, overdrafts and certain other grants, such as the Basic Payment Scheme or agri-environment schemes such as the Countryside Stewardship Scheme.</p>
+      {{ govukInsetText({
+        html: '<p>You can use:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>loans</li>
+          <li>overdrafts</li>
+          <li>the Basic Payment Scheme</li>
+          <li>agri-environment schemes such as the Countryside Stewardship Scheme</li>
+        </ul>
+      '
+      }) }}
 
       <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" target="_blank" class="govuk-!-font-size-19">
          See other grants you may be eligible for.
