--- a/app/views/water/current/remaining-costs.html
+++ b/app/views/water/current/remaining-costs.html
@@ -10,7 +10,7 @@ Meeting the remaining project costs
 
 {% block content %}
 
-<main class="govuk-main-wrapper"> 
+<main class="govuk-main-wrapper">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
@@ -52,14 +52,22 @@ Meeting the remaining project costs
 
       </form>
     </div>
-    <div class="govuk-grid-column-one-third govuk-!-padding-5">
-      <aside class="app-related-items">
-        <h3 class="govuk-heading-m">Eligibility</h3>
-        <div class="govuk-body govuk-!-font-size-19">  
-          <p>You cannot use public money (for example grant funding from government or local authorities) towards the project costs.</p>
-          <p>You can use loans, overdrafts and certain other grants, such as the Basic Payment Scheme or agri-environment schemes such as the Countryside Stewardship Scheme.</p>
-        </div> 
-      </aside>         
+    <div class="govuk-grid-column-one-third">
+
+      <div class="app-step-nav-related app-step-nav-related--singular">
+        <h2 class="app-step-nav-related__heading">
+          <span class="app-step-nav-related__pretitle">Eligibility</span>
+          </h2>
+          <p>You cannot use public money (for example, grant funding from government or local authorities) towards the project costs.</p>
+          <p>You can use:</p>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>loans</li>
+            <li>overdrafts</li>
+            <li>the Basic Payment Scheme</li>
+            <li>agri-environment schemes such as the Countryside Stewardship Scheme</li>
+
+          </ul>
+      </div>
     </div>
   </div>
 </main>
