--- a/app/views/water/current/views/layouts/_BASEFULL.html
+++ b/app/views/water/current/views/layouts/_BASEFULL.html
@@ -1,4 +1,4 @@
-{% set serviceName = "Apply for a productivity grant" %}
+{% set serviceName = "Check if you can apply for a Water Management Grant" %}
 
 {% extends "layout.html" %}
 
