--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,32 +28,33 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
+      <td class="govuk-table__cell"><a href="water" class="govuk-lik govuk-link--no-visited-state">
+          Water management grant
+        </a></td>
+      <td class="govuk-table__cell">Checker (R2 version 1, last updated on 31 August 2022)</td>
+    </tr>
+    <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="slurrystorage" class="govuk-lik govuk-link--no-visited-state">Slurry infrastructure grant</a>
         </td>
-      <td class="govuk-table__cell">Checker (v4 - last updated on 1 August 2022)</td>
+      <td class="govuk-table__cell">Checker (v4, last updated on 1 August 2022)</td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="addingvalue" class="govuk-lik govuk-link--no-visited-state">Adding value grant</a>
         </td>
-      <td class="govuk-table__cell">Checker (v4 - last updated on 30 March 2022)</td>
+      <td class="govuk-table__cell">Checker (v4, last updated on 30 March 2022)</td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="robotics" class="govuk-lik govuk-link--no-visited-state">Productivity grant - Robotics and innovation</a>
         </td>
-      <td class="govuk-table__cell">Checker (v4 - last updated on 22 November 2021)</td>
+      <td class="govuk-table__cell">Checker (v4, last updated on 22 November 2021)</td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="slurry" class="govuk-lik govuk-link--no-visited-state">Productivity grant - Slurry</a>
         </td>
-      <td class="govuk-table__cell">Checker (v3 - last updated on 19 October 2021)</td>
+      <td class="govuk-table__cell">Checker (v3, last updated on 19 October 2021)</td>
     </tr>
 
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="water" class="govuk-lik govuk-link--no-visited-state">
-          Water resource management EoI
-        </a></td>
-      <td class="govuk-table__cell">Checker (v7 - private beta, last updated on 1 of June 2021)</td>
-    </tr>
+
   </tbody>
 </table>
 
