--- a/app/views/water/index.html
+++ b/app/views/water/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% extends "addingvalue/current/views/layouts/_BASEFULL-AV.html" %}
+{% extends "water/current/views/layouts/_BASEFULL.html" %}
 
 {% block service %}
 
@@ -20,7 +20,7 @@
         <h2 class="govuk-heading-l">User research</h2>
 
         <p class='govuk-list app-list--definition'>
-        <a href='#' class="govuk-link--no-visited-state">Guidance: Water Management Grantt</a></p>
+        <a href='#' class="govuk-link--no-visited-state">Guidance: Water Management Grant</a></p>
           <p class='govuk-list app-list--definition'>
             <a href='#' class="govuk-link--no-visited-state">Start page</a><br>
             Specialist start page, hosted on GOV.UK</p>
@@ -35,7 +35,7 @@
                             <p class='govuk-list app-list--definition'>
                               <a href='water/current/guidance' class="govuk-link--no-visited-state"><strong>R2: version 1 (current)</a></strong><br>
                               This version was not tested yet and <a href='https://eaflood.atlassian.net/browse/GRANTS-856' target="new" class="govuk-link--no-visited-state">includes prototype tickets from Jira</a>.<br>
-                                <span class="govuk-body govuk-!-font-size-14"># Last updated on 23 August 2022<br/>
+                                <span class="govuk-body govuk-!-font-size-14"># Last updated on 31 August 2022<br/>
                                 </span></p>
 
                                 <p class='govuk-heading-m'>Previous versions</p>
