GRANTS-987, GRANTS-903, GRANTS-984, GRANTS-985, GRANTS-986

--- a/app/views/water/current/applying.html
+++ b/app/views/water/current/applying.html
@@ -25,7 +25,7 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="applicant-1" name="applicant" type="radio" value="Farmer" {{ checked("applicant", "Farmer") }}>
                 <label class="govuk-label govuk-radios__label" for="applicant-1">
-                  Farmer
+                  Applicant
                 </label>
               </div>
               <div class="govuk-radios__item">
