--- a/app/views/water/current/agent-details.html
+++ b/app/views/water/current/agent-details.html
@@ -50,27 +50,27 @@
           <label class="govuk-label" for="confirm-farmer-email">
               Confirm email address
           </label>
-          <input class="govuk-input  govuk-!-width-two-thirds" id="confirm-farmer-email" name="confirm-farmer-email" type="confirm-farmer-email" spellcheck="false"  value="{{ data['confirm-farmer-email'] }}">
+          <input class="govuk-input  govuk-!-width-two-thirds" id="confirm-farmer-email" name="confirm-farmer-email" type="confirm-farmer-email" spellcheck="false"  value="{{ data['confirm-agent-email'] }}">
         </div>
 
         <div class="govuk-form-group">
-          <label class="govuk-label" for="farmer-landline">
+          <label class="govuk-label" for="agent-landline">
               Mobile phone number
           </label>
           <div id="farmer-landline-hint" class="govuk-hint">
               We will only use this to contact you about your application
           </div>
-          <input class="govuk-input  govuk-!-width-two-thirds" id="farmer-landline" name="farmer-landline" type="farmer-landline" spellcheck="false" aria-describedby="farmer-landline-hint" autocomplete="farmer-landline" value="{{ data['farmer-landline'] }}">
+          <input class="govuk-input  govuk-!-width-two-thirds" id="agent-landline" name="agent-landline" type="agent-landline" spellcheck="false" aria-describedby="agent-landline-hint" autocomplete="agent-landline" value="{{ data['agent-landline'] }}">
         </div>
 
         <div class="govuk-form-group">
-          <label class="govuk-label" for="farmer-mobile">
+          <label class="govuk-label" for="agent-mobile">
               Landline number
           </label>
           <div id="farmer-mobile-hint" class="govuk-hint">
               We will only use this to contact you about your application
           </div>
-          <input class="govuk-input  govuk-!-width-two-thirds" id="farmer-mobile" name="farmer-mobile" type="farmer-mobile" spellcheck="false" aria-describedby="farmer-mobile-hint" autocomplete="farmer-mobile" value="{{ data['farmer-mobile'] }}">
+          <input class="govuk-input  govuk-!-width-two-thirds" id="agent-mobile" name="agent-mobile" type="agent-mobile" spellcheck="false" aria-describedby="agent-mobile-hint" autocomplete="agent-mobile" value="{{ data['agent-mobile'] }}">
         </div>
 
         <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-3">Business address</h2>
@@ -116,7 +116,7 @@
           <button onclick="document.getElementById('mainForm').action='{{ detailsUrl }}'"
             class="govuk-button govuk-button--secondary " data-module="govuk-button"
           >
-            Back to details page
+            Back to details
           </button>
         {% endif %}
 
