--- a/app/views/water/current/check-details.html
+++ b/app/views/water/current/check-details.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-    
+
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l govuk-!-margin-top-9 govuk-!-margin-bottom-9">Check your details </h1>
@@ -73,7 +73,7 @@
                             <p>{{ data['sbi'] }}</p>
                         </td>
                     </tr>
-                    
+
                 </tbody>
             </table>
             <br><br><br>
@@ -103,7 +103,15 @@
                             <strong>Name</strong>
                         </th>
                         <td class="govuk-table__cell">
-                            <p>{{ data['agent-firstname'] }}</p>
+                            <p>{{ data['agent-firstname'] }} {{ data['agent-firstname'] }}</p>
+                        </td>
+                    </tr>
+                    <tr class="govuk-table__row--no-border">
+                        <th  scope="row" class="govuk-table__header">
+                            <strong>Business name</strong>
+                        </th>
+                        <td class="govuk-table__cell">
+                            <p>{{data['business-name']}}</p>
                         </td>
                     </tr>
                     <tr class="govuk-table__row">
@@ -112,12 +120,13 @@
                         </th>
                         <td class="govuk-table__cell">
                             <p>{{ data['agent-email'] }}</p>
+                            <p>{{ data['agent-mobile'] }}</p>
                             <p>{{ data['agent-landline'] }}</p>
                         </td>
                     </tr>
                     <tr class="govuk-table__row">
                         <th  scope="row" class="govuk-table__header">
-                            <strong>Address</strong>
+                            <strong>Business address</strong>
                         </th>
                         <td class="govuk-table__cell">
                            <p>{{ data['agent-address1'] }}</p>
@@ -125,22 +134,22 @@
                            <p>{{ data['agent-postcode'] }}</p>
                         </td>
                     </tr>
-                    
+
                 </tbody>
             </table>
             <br><br>
             {% endif %}
-            
+
             <table class="govuk-table">
                 <thead class="govuk-table__head">
                     <tr class="govuk-table__row">
                         <div class="govuk-summary-list__row--no-border">
                             <dt class="govuk-summary-list__key">
-                                <p class="govuk-body govuk-!-font-size-24"><strong>Farmer's details</strong></p>
+                                <p class="govuk-body govuk-!-font-size-24"><strong>Applicant details</strong></p>
                             </dt>
                             <dd class="govuk-summary-list__actions">
                                 <a class="govuk-link" href="farmer-details">
-                                    Change<span class="govuk-visually-hidden">farmer's details</span>
+                                    Change<span class="govuk-visually-hidden">applicant details</span>
                                 </a>
                             </dd>
                         </div>
@@ -153,43 +162,53 @@
                             <strong>Name</strong>
                         </th>
                         <td class="govuk-table__cell">
-                            <p>{{data['farmer-firstname']}}</p>
+                            <p>{{ data['farmer-firstname'] }} {{ data['farmer-lastname'] }}</p>
                         </td>
                     </tr>
+
+
                     <tr class="govuk-table__row--no-border">
-                        <th  scope="row" class="govuk-table__header">
-                            <strong>Gender</strong>
-                        </th>
-                        <td class="govuk-table__cell">
-                            <p>{{data['gender']}} </p>
-                        </td>
-                    </tr>
-                    <tr class="govuk-table__row">
                         <th  scope="row" class="govuk-table__header">
                             <strong> Contact details</strong>
                         </th>
                         <td class="govuk-table__cell">
                            <p> {{ data['farmer-email'] }} </p>
+                           <p> {{ data['farmer-mobile'] }} </p>
                            <p> {{ data['farmer-landline'] }} </p>
                         </td>
                     </tr>
-                    <tr class="govuk-table__row">
+                    <tr class="govuk-table__row--no-border">
                         <th  scope="row" class="govuk-table__header">
-                            <strong>Address</strong>
+                            <strong>Business address</strong>
                         </th>
                         <td class="govuk-table__cell">
-                           <p> {{ data['farmer-address1'] }} </p>
-                           <p> {{ data['farmer-address2'] }} </p>
+                           <p> {{ data['farmer-address1'] }}, {{ data['farmer-address2'] }}</p>
+                           <p> {{ data['farmer-town'] }}</p>
+                           <p> {{ data['farmer-county'] }} </p>
                            <p> {{ data['farmer-postcode'] }} </p>
                         </td>
-                    </tr> 
+
+
+                    </tr>
+                    <tr class="govuk-table__row--no-border">
+                        <th  scope="row" class="govuk-table__header">
+                            <strong>Project postcode</strong>
+                        </th>
+                        <td class="govuk-table__cell">
+                           <p> {{ data['project-postcode'] }} </p>
+
+
+                        </td>
+
+
+                    </tr>
                 </tbody>
             </table>
-        </div>        
+        </div>
      </div>
     <div class="govuk-grid-row govuk-!-padding-top-8">
         <div class="govuk-grid-column-two-thirds">
-            <form class="form" action="{{ nextUrl }}" method="post">  
+            <form class="form" action="{{ nextUrl }}" method="post">
                 <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
                     Continue
                 </button>
